# SM64LinuxLauncher-qt

./: .gitignore  CONTRIBUTING.md  README.md  builduis.py  pyproject.toml  pyrightconfig.json  setup.py
SM64LinuxLauncher-qt/: setup.py
SM64LinuxLauncher-qt/launcher/: __main__.py  build.py  dialogs.py  sample_build.json
SM64LinuxLauncher-qt/launcher/builds/dummy_build/: build.json
SM64LinuxLauncher-qt/launcher/res/: sample_build.json  version.json
SM64LinuxLauncher-qt/launcher/res/repos/: repos.json
SM64LinuxLauncher-qt/launcher/res/ui/: about.ui  build_new.ui  confirm_delete.ui  failed.ui  flags.ui  info.ui  main_window.ui  recheck_config.ui  repo_info.ui  select_baserom.ui  succeeded.ui  view_json.ui
SM64LinuxLauncher-qt/launcher/ui/: about.ui  build_new.ui  building.ui  failed.ui  flags.ui  license.ui  main_window.ui  recheck_config.ui  select_baserom.ui  succeeded.ui
SM64LinuxLauncher-qt/launcher/uic/: about_ui.py  build_new_ui.py  building_ui.py  confirm_delete_ui.py  failed_ui.py  flags_ui.py  info_ui.py  license_ui.py  main_window_ui.py  recheck_config_ui.py  repo_info_ui.py  select_baserom_ui.py  succeeded_ui.py  view_json_ui.py
tools/: builduis.py  make_release.py
